# minimind

./: .gitignore  .gitmodules  DOCUMENTATION_SUMMARY.md  FINE_TURNING_BRANCH_INFO.md  Minimind训练.ipynb  PUSH_INSTRUCTIONS.md  README.md  TASK_COMPLETION_SUMMARY.md  chat.py  dataset.py  evaluate.py  pyproject.toml  tokenizer.py  train.py  train.sh  train_full_sft.py  train_pretrain.py
baseline/: README.md  train_pretrain.py  train_tokenizer.py
docs/: Gemini-LLM 分词方式发展历程.md  README.md  minimind_architecture.md  quick_reference.md  tokenization_evolution_guide.md  training_guide.md
docs/components/: 01_rmsnorm.md  02_rope.md  03_attention.md  04_swiglu_ffn.md  05_moe.md  06_evaluation.md  06_tokenization.md  07_loss_function.md  README.md
model/: LMConfig.py
scripts/: serve_openai_api.py
