[project]
name = "minimind-train"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.7",
    "langchain-experimental>=0.4.0",
    "torch==2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "tokenizers>=0.14.0",
    "kaggle>=1.7.4.5",
    "tiktoken>=0.12.0",
]
